style: added height to card errors div to stop elements shift

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -33,3 +33,7 @@
     position: relative;
     right: .5rem;
 }
+
+#card-errors {
+    height: 25px;
+}
